--- a/index.html
+++ b/index.html
@@ -26,16 +26,21 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="brand" id="gdg_chapter_name">{{ chapter_name }}</a>
-                        <div class="nav-collapse" collapse="isNavCollapsed" ng-click="isNavCollapsed = true">
+                       <div class="nav-collapse" collapse="isNavCollapsed" ng-click="isNavCollapsed = true">
                             <ul class="nav">
                                 <li ng-class="{ 'active' : activeTab=='about' }"><a href="#about">About</a></li>
+                                <li><a href="http://devfest.gdgkk.info/">DevFest KK</a></li>
+                                <li><a href="http://extended.gdgkk.info/">I/O Extended KK</a></li>
                                 <li ng-class="{ 'active' : activeTab=='news' }"><a href="#news">News</a></li>
                                 <li ng-class="{ 'active' : activeTab=='events' }"><a href="#events">Events</a></li>
                                 <li ng-class="{ 'active' : activeTab=='photos' }"><a href="#photos">Photos</a></li>
-                                <li><a ng-href="{{ google_plus_link }}" rel="publisher" target="_blank">Google+</a></li>
+                                <!-- li class="icons" > < a ng-href="{{ google_plus_link }}" target="_blank" > Google+< /a > < /li -->
+                                <li><a href="https://plus.google.com/117368911868983524073" rel="publisher">Google+</a></li>
+                                <li><a href="https://twitter.com/gdgkotakinabalu" target="_blank">Twitter</a></li>
+                                <li><a href="https://www.facebook.com/GDGKotaKinabalu" target="_blank">Facebook</a></li>
                             </ul>
                         </div>
-                    </div>
+                     </div>
                 </div>
             </div>
             <div class="container">
