Removed slash from gdg.css stylesheet reference

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <!-- endinject -->
         <!-- inject:css -->
-        <link rel="stylesheet" href="/app/css/gdg.css">
+        <link rel="stylesheet" href="app/css/gdg.css">
         <!-- endinject -->
         <link rel="icon" sizes="16x16 32x32" href="/favicon.ico">
         <script>
